tests/toylang/neg/001306_mutation.toylang
program a = { var bool : bool; } .
